fixing tile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ html,body {
 }
 
 .c2 {
-	margin-left: 22vw;
+	margin-left: 21vw;
 }
 
 .c3 {
@@ -148,19 +148,19 @@ html,body {
 }
 
 .r1 {
-	margin-top: 2vw;
+	margin-top: 1vw;
 }
 
 .r2 {
-	margin-top: 23vw;
+	margin-top: 21vw;
 }
 
 .r3 {
-	margin-top: 44vw;
+	margin-top: 43vw;
 }
 
 .r4 {
-	margin-top: 65vw;
+	margin-top: 64vw;
 }
 
 /* -- colors --- */
